@@ -34,7 +34,7 @@ import org.gjt.sp.jedit.TextUtilities;
  * for matching XML tags.
  *
  * @author Slava Pestov
- * @version $Id: StructureMatcher.java,v 1.3 2003/06/24 23:24:39 spestov Exp $
+ * @version $Id: StructureMatcher.java,v 1.4 2003/06/27 20:02:06 spestov Exp $
  * @since jEdit 4.2pre3
  */
 public interface StructureMatcher
@@ -46,6 +46,15 @@ public interface StructureMatcher
 	 * @since jEdit 4.2pre3
 	 */
 	Match getMatch(JEditTextArea textArea);
+	//}}}
+
+	//{{{ selectMatch() method
+	/**
+	 * Selects from the caret to the matching structure element (if there is
+	 * one, otherwise the behavior of this method is undefined).
+	 * @since jEdit 4.2pre3
+	 */
+	void selectMatch(JEditTextArea textArea);
 	//}}}
 
 	//{{{ BracketMatcher class
@@ -68,7 +77,8 @@ public interface StructureMatcher
 					int bracketLine = textArea
 						.getLineOfOffset(
 						bracketOffset);
-					return new Match(bracketLine,
+					return new Match(this,
+						bracketLine,
 						bracketOffset,
 						bracketLine,
 						bracketOffset + 1);
@@ -76,6 +86,11 @@ public interface StructureMatcher
 			}
 
 			return null;
+		}
+
+		public void selectMatch(JEditTextArea textArea)
+		{
+			textArea.selectToMatchingBracket();
 		}
 	} //}}}
 
@@ -86,17 +101,23 @@ public interface StructureMatcher
 	 */
 	public static class Match
 	{
+		public StructureMatcher matcher;
 		public int startLine;
 		public int start;
 		public int endLine;
 		public int end;
 
-		public Match()
+		public Match() {}
+
+		public Match(StructureMatcher matcher)
 		{
+			this.matcher = matcher;
 		}
 
-		public Match(int startLine, int start, int endLine, int end)
+		public Match(StructureMatcher matcher, int startLine,
+			int start, int endLine, int end)
 		{
+			this(matcher);
 			this.startLine = startLine;
 			this.start = start;
 			this.endLine = endLine;
